# Jarvis-agent

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  PLAN.md  PROGRESS.md  README.md  REVIEW.md  TASKS.md  package-lock.json  package.json  vite.config.ts
server/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/src/: agents.ts  anthropic.ts  config.ts  embeddings.ts  history.ts  index.ts  ingest-cli.ts  memory.ts  tools.ts  traces.ts  types.ts  vector-store.ts
server/test/: agents.test.ts  anthropic.test.ts  calculator.test.ts  embeddings.test.ts  history.test.ts  index.test.ts  ingest-cli.test.ts  memory.test.ts  tools.test.ts  vector-store.test.ts
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
