[package]
name = "jarvis-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
